Assignment Two/lab1-testsuite-larger/ParGrammar.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.19.12 from ParGrammar.y
-----------------------------------------------------------------------------

state 4 contains 1 reduce/reduce conflicts.
state 37 contains 1 reduce/reduce conflicts.
state 60 contains 2 shift/reduce conflicts.
state 61 contains 4 shift/reduce conflicts.
state 62 contains 2 shift/reduce conflicts.
state 63 contains 1 shift/reduce conflicts.
state 64 contains 2 shift/reduce conflicts.
state 101 contains 1 shift/reduce conflicts.
state 116 contains 1 reduce/reduce conflicts.
state 125 contains 1 reduce/reduce conflicts.
state 130 contains 1 reduce/reduce conflicts.
state 131 contains 1 reduce/reduce conflicts.
state 182 contains 1 shift/reduce conflicts.
state 184 contains 4 shift/reduce conflicts.
state 185 contains 4 shift/reduce conflicts.
state 186 contains 2 shift/reduce conflicts.
state 187 contains 2 shift/reduce conflicts.
state 188 contains 2 shift/reduce conflicts.
state 189 contains 2 shift/reduce conflicts.
state 196 contains 2 shift/reduce conflicts.
state 199 contains 2 shift/reduce conflicts.
state 226 contains 1 shift/reduce conflicts.

rule 42 is unused
rule 45 is unused

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_pProgram -> Program                         (0)
	%start_pUse -> Use                                 (1)
	%start_pDef -> Def                                 (2)
	%start_pListUse -> ListUse                         (3)
	%start_pListDef -> ListDef                         (4)
	%start_pArg -> Arg                                 (5)
	%start_pListArg -> ListArg                         (6)
	%start_pStm -> Stm                                 (7)
	%start_pListStm -> ListStm                         (8)
	%start_pExp15 -> Exp15                             (9)
	%start_pType -> Type                               (10)
	%start_pClassI -> ClassI                           (11)
	%start_pClassT -> ClassT                           (12)
	%start_pClass -> Class                             (13)
	%start_pExp14 -> Exp14                             (14)
	%start_pExp13 -> Exp13                             (15)
	%start_pExp12 -> Exp12                             (16)
	%start_pExp11 -> Exp11                             (17)
	%start_pExp10 -> Exp10                             (18)
	%start_pExp9 -> Exp9                               (19)
	%start_pExp8 -> Exp8                               (20)
	%start_pExp4 -> Exp4                               (21)
	%start_pExp3 -> Exp3                               (22)
	%start_pExp2 -> Exp2                               (23)
	%start_pExp -> Exp                                 (24)
	%start_pExp1 -> Exp1                               (25)
	%start_pExp5 -> Exp5                               (26)
	%start_pExp6 -> Exp6                               (27)
	%start_pExp7 -> Exp7                               (28)
	%start_pListExp -> ListExp                         (29)
	%start_pListId -> ListId                           (30)
	%start_pListType -> ListType                       (31)
	Integer -> L_integ                                 (32)
	Double -> L_doubl                                  (33)
	String -> L_quoted                                 (34)
	Id -> L_Id                                         (35)
	Program -> ListUse ListDef                         (36)
	Use -> 'using' Class                               (37)
	Def -> Type Id '(' ListArg ')' '{' ListStm '}'     (38)
	ListUse ->                                         (39)
	ListUse -> Use                                     (40)
	ListUse -> Use ';' ListUse                         (41)
	ListDef ->                                         (42)
	ListDef -> Def ';' ListDef                         (43)
	ListDef ->                                         (44)
	ListDef -> Def ListDef                             (45)
	ListDef -> Def                                     (46)
	ListDef -> Def ListDef                             (47)
	Arg -> Type Id                                     (48)
	ListArg ->                                         (49)
	ListArg -> Arg                                     (50)
	ListArg -> Arg ',' ListArg                         (51)
	Stm -> Exp ';'                                     (52)
	Stm -> Type ListId ';'                             (53)
	Stm -> Type Id '=' Exp ';'                         (54)
	Stm -> 'return' Exp ';'                            (55)
	Stm -> 'return' ';'                                (56)
	Stm -> 'while' '(' Exp ')' Stm                     (57)
	Stm -> 'for' '(' Exp ';' Exp ';' Exp ')' Stm       (58)
	Stm -> '{' ListStm '}'                             (59)
	Stm -> 'if' '(' Exp ')' Stm 'else' Stm             (60)
	Stm -> 'if' '(' Exp ')' Stm                        (61)
	Stm -> 'throw' Exp ';'                             (62)
	Stm -> 'typedef' Class Id ';'                      (63)
	ListStm ->                                         (64)
	ListStm -> ListStm Stm                             (65)
	Exp15 -> Id                                        (66)
	Exp15 -> Id '.' Exp15                              (67)
	Exp15 -> Id '(' ListExp ')'                        (68)
	Exp15 -> ClassI                                    (69)
	Exp15 -> 'true'                                    (70)
	Exp15 -> 'false'                                   (71)
	Exp15 -> Integer                                   (72)
	Exp15 -> Double                                    (73)
	Exp15 -> String                                    (74)
	Exp15 -> String String                             (75)
	Exp15 -> '(' Exp ')'                               (76)
	Type -> Id '<' Type '>'                            (77)
	Type -> 'const' Type '&'                           (78)
	Type -> ClassT                                     (79)
	Type -> 'bool'                                     (80)
	Type -> 'int'                                      (81)
	Type -> 'double'                                   (82)
	Type -> 'void'                                     (83)
	Type -> 'string'                                   (84)
	ClassI -> Id '::' Id                               (85)
	ClassI -> Class '::' Id                            (86)
	ClassT -> Id '::' Type                             (87)
	ClassT -> Class '::' Type                          (88)
	Class -> ClassI                                    (89)
	Class -> ClassT                                    (90)
	Exp14 -> Exp15 '++'                                (91)
	Exp14 -> Exp15 '--'                                (92)
	Exp14 -> Exp15                                     (93)
	Exp13 -> '++' Exp14                                (94)
	Exp13 -> '--' Exp14                                (95)
	Exp13 -> Exp14                                     (96)
	Exp12 -> Exp12 '*' Exp13                           (97)
	Exp12 -> Exp12 '/' Exp13                           (98)
	Exp12 -> Exp13                                     (99)
	Exp11 -> Exp11 '+' Exp12                           (100)
	Exp11 -> Exp11 '-' Exp12                           (101)
	Exp11 -> Exp12                                     (102)
	Exp10 -> Exp10 '<<' Exp                            (103)
	Exp10 -> Exp10 '>>' Exp                            (104)
	Exp10 -> Exp11                                     (105)
	Exp9 -> Exp9 '<' Exp10                             (106)
	Exp9 -> Exp9 '>' Exp10                             (107)
	Exp9 -> Exp9 '<=' Exp10                            (108)
	Exp9 -> Exp9 '>=' Exp10                            (109)
	Exp9 -> Exp10                                      (110)
	Exp8 -> Exp8 '==' Exp9                             (111)
	Exp8 -> Exp8 '!=' Exp9                             (112)
	Exp8 -> Exp9                                       (113)
	Exp4 -> Exp4 '&&' Exp5                             (114)
	Exp4 -> Exp5                                       (115)
	Exp3 -> Exp3 '||' Exp4                             (116)
	Exp3 -> Exp4                                       (117)
	Exp2 -> Exp3 '=' Exp2                              (118)
	Exp2 -> Exp3                                       (119)
	Exp -> Exp1                                        (120)
	Exp1 -> Exp2                                       (121)
	Exp5 -> Exp6                                       (122)
	Exp6 -> Exp7                                       (123)
	Exp7 -> Exp8                                       (124)
	ListExp ->                                         (125)
	ListExp -> Exp                                     (126)
	ListExp -> Exp ',' ListExp                         (127)
	ListId -> Id                                       (128)
	ListId -> Id ',' ListId                            (129)
	ListType -> Type                                   (130)
	ListType -> Type ',' ListType                      (131)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	'!='           { PT _ (TS _ 1) }
	'&'            { PT _ (TS _ 2) }
	'&&'           { PT _ (TS _ 3) }
	'('            { PT _ (TS _ 4) }
	')'            { PT _ (TS _ 5) }
	'*'            { PT _ (TS _ 6) }
	'+'            { PT _ (TS _ 7) }
	'++'           { PT _ (TS _ 8) }
	','            { PT _ (TS _ 9) }
	'-'            { PT _ (TS _ 10) }
	'--'           { PT _ (TS _ 11) }
	'.'            { PT _ (TS _ 12) }
	'/'            { PT _ (TS _ 13) }
	'::'           { PT _ (TS _ 14) }
	';'            { PT _ (TS _ 15) }
	'<'            { PT _ (TS _ 16) }
	'<<'           { PT _ (TS _ 17) }
	'<='           { PT _ (TS _ 18) }
	'='            { PT _ (TS _ 19) }
	'=='           { PT _ (TS _ 20) }
	'>'            { PT _ (TS _ 21) }
	'>='           { PT _ (TS _ 22) }
	'>>'           { PT _ (TS _ 23) }
	'bool'         { PT _ (TS _ 24) }
	'const'        { PT _ (TS _ 25) }
	'double'       { PT _ (TS _ 26) }
	'else'         { PT _ (TS _ 27) }
	'false'        { PT _ (TS _ 28) }
	'for'          { PT _ (TS _ 29) }
	'if'           { PT _ (TS _ 30) }
	'int'          { PT _ (TS _ 31) }
	'return'       { PT _ (TS _ 32) }
	'string'       { PT _ (TS _ 33) }
	'throw'        { PT _ (TS _ 34) }
	'true'         { PT _ (TS _ 35) }
	'typedef'      { PT _ (TS _ 36) }
	'using'        { PT _ (TS _ 37) }
	'void'         { PT _ (TS _ 38) }
	'while'        { PT _ (TS _ 39) }
	'{'            { PT _ (TS _ 40) }
	'||'           { PT _ (TS _ 41) }
	'}'            { PT _ (TS _ 42) }
	L_integ        { PT _ (TI $$) }
	L_doubl        { PT _ (TD $$) }
	L_quoted       { PT _ (TL $$) }
	L_Id           { PT _ (T_Id $$) }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_pProgram rule  0
	%start_pUse     rule  1
	%start_pDef     rule  2
	%start_pListUse rule  3
	%start_pListDef rule  4
	%start_pArg     rule  5
	%start_pListArg rule  6
	%start_pStm     rule  7
	%start_pListStm rule  8
	%start_pExp15   rule  9
	%start_pType    rule  10
	%start_pClassI  rule  11
	%start_pClassT  rule  12
	%start_pClass   rule  13
	%start_pExp14   rule  14
	%start_pExp13   rule  15
	%start_pExp12   rule  16
	%start_pExp11   rule  17
	%start_pExp10   rule  18
	%start_pExp9    rule  19
	%start_pExp8    rule  20
	%start_pExp4    rule  21
	%start_pExp3    rule  22
	%start_pExp2    rule  23
	%start_pExp     rule  24
	%start_pExp1    rule  25
	%start_pExp5    rule  26
	%start_pExp6    rule  27
	%start_pExp7    rule  28
	%start_pListExp rule  29
	%start_pListId  rule  30
	%start_pListType rule  31
	Integer         rule  32
	Double          rule  33
	String          rule  34
	Id              rule  35
	Program         rule  36
	Use             rule  37
	Def             rule  38
	ListUse         rules 39, 40, 41
	ListDef         rules 42, 43, 44, 45, 46, 47
	Arg             rule  48
	ListArg         rules 49, 50, 51
	Stm             rules 52, 53, 54, 55, 56, 57, 58, 59, 60, 61, 62, 63
	ListStm         rules 64, 65
	Exp15           rules 66, 67, 68, 69, 70, 71, 72, 73, 74, 75, 76
	Type            rules 77, 78, 79, 80, 81, 82, 83, 84
	ClassI          rules 85, 86
	ClassT          rules 87, 88
	Class           rules 89, 90
	Exp14           rules 91, 92, 93
	Exp13           rules 94, 95, 96
	Exp12           rules 97, 98, 99
	Exp11           rules 100, 101, 102
	Exp10           rules 103, 104, 105
	Exp9            rules 106, 107, 108, 109, 110
	Exp8            rules 111, 112, 113
	Exp4            rules 114, 115
	Exp3            rules 116, 117
	Exp2            rules 118, 119
	Exp             rule  120
	Exp1            rule  121
	Exp5            rule  122
	Exp6            rule  123
	Exp7            rule  124
	ListExp         rules 125, 126, 127
	ListId          rules 128, 129
	ListType        rules 130, 131

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0


	'bool'         reduce using rule 39
	'const'        reduce using rule 39
	'double'       reduce using rule 39
	'int'          reduce using rule 39
	'string'       reduce using rule 39
	'using'        shift, and enter state 121
	'void'         reduce using rule 39
	L_Id           reduce using rule 39
	%eof           reduce using rule 39

	Program        goto state 124
	Use            goto state 119
	ListUse        goto state 125

State 1


	'using'        shift, and enter state 121

	Use            goto state 123

State 2


	'bool'         shift, and enter state 40
	'const'        shift, and enter state 41
	'double'       shift, and enter state 42
	'int'          shift, and enter state 43
	'string'       shift, and enter state 44
	'void'         shift, and enter state 45
	L_Id           shift, and enter state 46

	Id             goto state 34
	Def            goto state 122
	Type           goto state 118
	ClassI         goto state 36
	ClassT         goto state 37
	Class          goto state 38

State 3


	'using'        shift, and enter state 121
	%eof           reduce using rule 39

	Use            goto state 119
	ListUse        goto state 120

State 4


	'bool'         shift, and enter state 40
	'const'        shift, and enter state 41
	'double'       shift, and enter state 42
	'int'          shift, and enter state 43
	'string'       shift, and enter state 44
	'void'         shift, and enter state 45
	L_Id           shift, and enter state 46
	%eof           reduce using rule 44
			(reduce using rule 42)


	Id             goto state 34
	Def            goto state 116
	ListDef        goto state 117
	Type           goto state 118
	ClassI         goto state 36
	ClassT         goto state 37
	Class          goto state 38

State 5


	'bool'         shift, and enter state 40
	'const'        shift, and enter state 41
	'double'       shift, and enter state 42
	'int'          shift, and enter state 43
	'string'       shift, and enter state 44
	'void'         shift, and enter state 45
	L_Id           shift, and enter state 46

	Id             goto state 34
	Arg            goto state 115
	Type           goto state 114
	ClassI         goto state 36
	ClassT         goto state 37
	Class          goto state 38

State 6


	'bool'         shift, and enter state 40
	'const'        shift, and enter state 41
	'double'       shift, and enter state 42
	'int'          shift, and enter state 43
	'string'       shift, and enter state 44
	'void'         shift, and enter state 45
	L_Id           shift, and enter state 46
	%eof           reduce using rule 49

	Id             goto state 34
	Arg            goto state 112
	ListArg        goto state 113
	Type           goto state 114
	ClassI         goto state 36
	ClassT         goto state 37
	Class          goto state 38

State 7


	'('            shift, and enter state 72
	'++'           shift, and enter state 73
	'--'           shift, and enter state 74
	'bool'         shift, and enter state 40
	'const'        shift, and enter state 41
	'double'       shift, and enter state 42
	'false'        shift, and enter state 75
	'for'          shift, and enter state 105
	'if'           shift, and enter state 106
	'int'          shift, and enter state 43
	'return'       shift, and enter state 107
	'string'       shift, and enter state 44
	'throw'        shift, and enter state 108
	'true'         shift, and enter state 76
	'typedef'      shift, and enter state 109
	'void'         shift, and enter state 45
	'while'        shift, and enter state 110
	'{'            shift, and enter state 111
	L_integ        shift, and enter state 33
	L_doubl        shift, and enter state 77
	L_quoted       shift, and enter state 78
	L_Id           shift, and enter state 46

	Integer        goto state 49
	Double         goto state 50
	String         goto state 51
	Id             goto state 101
	Stm            goto state 102
	Exp15          goto state 53
	Type           goto state 103
	ClassI         goto state 54
	ClassT         goto state 37
	Class          goto state 38
	Exp14          goto state 56
	Exp13          goto state 57
	Exp12          goto state 58
	Exp11          goto state 59
	Exp10          goto state 60
	Exp9           goto state 61
	Exp8           goto state 62
	Exp4           goto state 63
	Exp3           goto state 64
	Exp2           goto state 65
	Exp            goto state 104
	Exp1           goto state 67
	Exp5           goto state 68
	Exp6           goto state 69
	Exp7           goto state 70

State 8


	'('            reduce using rule 64
	'++'           reduce using rule 64
	'--'           reduce using rule 64
	'bool'         reduce using rule 64
	'const'        reduce using rule 64
	'double'       reduce using rule 64
	'false'        reduce using rule 64
	'for'          reduce using rule 64
	'if'           reduce using rule 64
	'int'          reduce using rule 64
	'return'       reduce using rule 64
	'string'       reduce using rule 64
	'throw'        reduce using rule 64
	'true'         reduce using rule 64
	'typedef'      reduce using rule 64
	'void'         reduce using rule 64
	'while'        reduce using rule 64
	'{'            reduce using rule 64
	L_integ        reduce using rule 64
	L_doubl        reduce using rule 64
	L_quoted       reduce using rule 64
	L_Id           reduce using rule 64
	%eof           reduce using rule 64

	ListStm        goto state 100

State 9


	'('            shift, and enter state 72
	'false'        shift, and enter state 75
	'true'         shift, and enter state 76
	L_integ        shift, and enter state 33
	L_doubl        shift, and enter state 77
	L_quoted       shift, and enter state 78
	L_Id           shift, and enter state 46

	Integer        goto state 49
	Double         goto state 50
	String         goto state 51
	Id             goto state 52
	Exp15          goto state 99
	ClassI         goto state 54
	ClassT         goto state 55
	Class          goto state 38

State 10


	'bool'         shift, and enter state 40
	'const'        shift, and enter state 41
	'double'       shift, and enter state 42
	'int'          shift, and enter state 43
	'string'       shift, and enter state 44
	'void'         shift, and enter state 45
	L_Id           shift, and enter state 46

	Id             goto state 34
	Type           goto state 98
	ClassI         goto state 36
	ClassT         goto state 37
	Class          goto state 38

State 11


	L_Id           shift, and enter state 46

	Id             goto state 94
	ClassI         goto state 97
	ClassT         goto state 55
	Class          goto state 38

State 12


	L_Id           shift, and enter state 46

	Id             goto state 94
	ClassI         goto state 36
	ClassT         goto state 96
	Class          goto state 38

State 13


	L_Id           shift, and enter state 46

	Id             goto state 94
	ClassI         goto state 36
	ClassT         goto state 55
	Class          goto state 95

State 14


	'('            shift, and enter state 72
	'false'        shift, and enter state 75
	'true'         shift, and enter state 76
	L_integ        shift, and enter state 33
	L_doubl        shift, and enter state 77
	L_quoted       shift, and enter state 78
	L_Id           shift, and enter state 46

	Integer        goto state 49
	Double         goto state 50
	String         goto state 51
	Id             goto state 52
	Exp15          goto state 53
	ClassI         goto state 54
	ClassT         goto state 55
	Class          goto state 38
	Exp14          goto state 93

State 15


	'('            shift, and enter state 72
	'++'           shift, and enter state 73
	'--'           shift, and enter state 74
	'false'        shift, and enter state 75
	'true'         shift, and enter state 76
	L_integ        shift, and enter state 33
	L_doubl        shift, and enter state 77
	L_quoted       shift, and enter state 78
	L_Id           shift, and enter state 46

	Integer        goto state 49
	Double         goto state 50
	String         goto state 51
	Id             goto state 52
	Exp15          goto state 53
	ClassI         goto state 54
	ClassT         goto state 55
	Class          goto state 38
	Exp14          goto state 56
	Exp13          goto state 92

State 16


	'('            shift, and enter state 72
	'++'           shift, and enter state 73
	'--'           shift, and enter state 74
	'false'        shift, and enter state 75
	'true'         shift, and enter state 76
	L_integ        shift, and enter state 33
	L_doubl        shift, and enter state 77
	L_quoted       shift, and enter state 78
	L_Id           shift, and enter state 46

	Integer        goto state 49
	Double         goto state 50
	String         goto state 51
	Id             goto state 52
	Exp15          goto state 53
	ClassI         goto state 54
	ClassT         goto state 55
	Class          goto state 38
	Exp14          goto state 56
	Exp13          goto state 57
	Exp12          goto state 91

State 17


	'('            shift, and enter state 72
	'++'           shift, and enter state 73
	'--'           shift, and enter state 74
	'false'        shift, and enter state 75
	'true'         shift, and enter state 76
	L_integ        shift, and enter state 33
	L_doubl        shift, and enter state 77
	L_quoted       shift, and enter state 78
	L_Id           shift, and enter state 46

	Integer        goto state 49
	Double         goto state 50
	String         goto state 51
	Id             goto state 52
	Exp15          goto state 53
	ClassI         goto state 54
	ClassT         goto state 55
	Class          goto state 38
	Exp14          goto state 56
	Exp13          goto state 57
	Exp12          goto state 58
	Exp11          goto state 90

State 18


	'('            shift, and enter state 72
	'++'           shift, and enter state 73
	'--'           shift, and enter state 74
	'false'        shift, and enter state 75
	'true'         shift, and enter state 76
	L_integ        shift, and enter state 33
	L_doubl        shift, and enter state 77
	L_quoted       shift, and enter state 78
	L_Id           shift, and enter state 46

	Integer        goto state 49
	Double         goto state 50
	String         goto state 51
	Id             goto state 52
	Exp15          goto state 53
	ClassI         goto state 54
	ClassT         goto state 55
	Class          goto state 38
	Exp14          goto state 56
	Exp13          goto state 57
	Exp12          goto state 58
	Exp11          goto state 59
	Exp10          goto state 89

State 19


	'('            shift, and enter state 72
	'++'           shift, and enter state 73
	'--'           shift, and enter state 74
	'false'        shift, and enter state 75
	'true'         shift, and enter state 76
	L_integ        shift, and enter state 33
	L_doubl        shift, and enter state 77
	L_quoted       shift, and enter state 78
	L_Id           shift, and enter state 46

	Integer        goto state 49
	Double         goto state 50
	String         goto state 51
	Id             goto state 52
	Exp15          goto state 53
	ClassI         goto state 54
	ClassT         goto state 55
	Class          goto state 38
	Exp14          goto state 56
	Exp13          goto state 57
	Exp12          goto state 58
	Exp11          goto state 59
	Exp10          goto state 60
	Exp9           goto state 88

State 20


	'('            shift, and enter state 72
	'++'           shift, and enter state 73
	'--'           shift, and enter state 74
	'false'        shift, and enter state 75
	'true'         shift, and enter state 76
	L_integ        shift, and enter state 33
	L_doubl        shift, and enter state 77
	L_quoted       shift, and enter state 78
	L_Id           shift, and enter state 46

	Integer        goto state 49
	Double         goto state 50
	String         goto state 51
	Id             goto state 52
	Exp15          goto state 53
	ClassI         goto state 54
	ClassT         goto state 55
	Class          goto state 38
	Exp14          goto state 56
	Exp13          goto state 57
	Exp12          goto state 58
	Exp11          goto state 59
	Exp10          goto state 60
	Exp9           goto state 61
	Exp8           goto state 87

State 21


	'('            shift, and enter state 72
	'++'           shift, and enter state 73
	'--'           shift, and enter state 74
	'false'        shift, and enter state 75
	'true'         shift, and enter state 76
	L_integ        shift, and enter state 33
	L_doubl        shift, and enter state 77
	L_quoted       shift, and enter state 78
	L_Id           shift, and enter state 46

	Integer        goto state 49
	Double         goto state 50
	String         goto state 51
	Id             goto state 52
	Exp15          goto state 53
	ClassI         goto state 54
	ClassT         goto state 55
	Class          goto state 38
	Exp14          goto state 56
	Exp13          goto state 57
	Exp12          goto state 58
	Exp11          goto state 59
	Exp10          goto state 60
	Exp9           goto state 61
	Exp8           goto state 62
	Exp4           goto state 86
	Exp5           goto state 68
	Exp6           goto state 69
	Exp7           goto state 70

State 22


	'('            shift, and enter state 72
	'++'           shift, and enter state 73
	'--'           shift, and enter state 74
	'false'        shift, and enter state 75
	'true'         shift, and enter state 76
	L_integ        shift, and enter state 33
	L_doubl        shift, and enter state 77
	L_quoted       shift, and enter state 78
	L_Id           shift, and enter state 46
